@@ -1,0 +1,20 @@
+<?xml version="1.0" encoding="ISO-8859-1" ?>
+<!--
+	Trigger Event
+	by Ronnar
+
+	Copyright (c) 2010 The BUG Mod.
+-->
+<mod id="TriggerEvent" 
+	 name="Trigger Event" 
+	 module="TriggerEvent" 
+	 author="Ronnar" 
+	 version="1.0" 
+	 date="8/1/2010"
+	 url="http://forums.civfanatics.com/showthread.php?p=9320491#post9320491">
+	 
+	<shortcut key="CTRL SHIFT E" function="showChooseEventPopup"/>
+	
+	<export function="triggerRandomEvent" to="CvScreensInterface"/>
+
+</mod>
