@@ -1481,6 +1481,16 @@
 		</Spanish>
 	</TEXT>
 	
+	<!-- Trigger Event -->
+	<TEXT>
+		<Tag>TXT_KEY_POPUP_SELECT_EVENT</Tag>
+		<English>Choose an event which should be triggered.</English>
+		<French>Choose an event which should be triggered.</French>
+		<German>Event aussuchen, das gestartet werden soll.</German>
+		<Italian>Choose an event which should be triggered.</Italian>
+		<Spanish>Choose an event which should be triggered.</Spanish>
+	</TEXT>
+	
 	<!-- General BTS Fixes -->
 	
 	<TEXT>
